# radc-xva

./: .gitignore  CMakeLists.txt  README.md
artifact/: AE_INSTRUCTIONS.md  EXPECTED_OUTPUTS.md
bench/: bench_allreduce_matrix.cpp  bench_pca_like.cpp  bench_stage3_intercept_driver.cpp  bench_xva_delta_gamma.cpp
configs/: medium_w2_exact_f32.yaml  medium_w2_fixedrank.yaml  medium_w2_nosafety.yaml  medium_w2_radc.yaml  network_w2_exact_f32.yaml  network_w2_fixedrank.yaml  network_w2_nosafety.yaml  network_w2_radc.yaml  network_w2_shock_sigma10_exact_f32.yaml  network_w2_shock_sigma10_radc.yaml  network_w2_shock_sigma1_exact_f32.yaml  network_w2_shock_sigma1_radc.yaml  network_w2_shock_sigma2_exact_f32.yaml  network_w2_shock_sigma2_radc.yaml  network_w2_shock_sigma4_exact_f32.yaml  network_w2_shock_sigma4_radc.yaml  network_w2_shock_sigma6_exact_f32.yaml  network_w2_shock_sigma6_radc.yaml  network_w2_shock_sigma8_exact_f32.yaml  network_w2_shock_sigma8_radc.yaml  stage2_w1_eval.yaml  stage2_w2_normal_eval.yaml  stage2_w2_normal_eval_cand_l14_lowN.yaml  stage2_w2_normal_eval_cand_l16_lowN.yaml  stage2_w2_normal_eval_cand_l18_lowN.yaml  stage2_w2_normal_eval_cand_l20_lowN.yaml  stage2_w2_normal_eval_cand_l22.yaml  stage2_w2_normal_eval_cand_l22_lowN.yaml  stage2_w2_normal_eval_cand_l24.yaml  stage2_w2_normal_eval_cand_l24_lowN.yaml  stage2_w2_normal_eval_cand_l26.yaml  stage2_w2_normal_eval_tuneA.yaml  stage2_w2_normal_eval_tuneB.yaml  stage2_w2_shock_eval.yaml  stage2_w3_eval.yaml  stage3_w1_eval.yaml  stage3_w2_normal_eval.yaml  stage3_w2_shock_eval.yaml  stage3_w3_eval.yaml  stage5_w2_normal_baseline.yaml  (+43 more)
python/: combine_metrics.py  make_figures.py  make_tables.py  merge_logs.py  stage4_pipeline.py  stage5_aggregate.py  stage5_pipeline.py  top_tier_summary.py  validate_configs.py  validate_run.py
radc/include/radc/: compressed_protocol.h  config.h  countsketch2d.h  exposure_cert.h  logging.h  matrix_view.h  mpi_intercept.h  rand_range_finder.h  risk_xva.h  safety_gate.h  small_svd.h  timer.h
radc/src/: compressed_protocol.cpp  config.cpp  countsketch2d.cpp  exposure_cert.cpp  logging.cpp  mpi_intercept.cpp  rand_range_finder.cpp  risk_xva.cpp  safety_gate.cpp  small_svd.cpp  timer.cpp
scripts/: build.sh  capture_net_bytes.sh  package_top_tier_bundle.sh  postprocess.sh  run_all.sh  run_all_experiments.sh  run_cluster.sh  run_local.sh  run_stage012345_full_eval.sh  run_stage01234_full_eval.sh  run_stage0123_full_eval.sh  run_stage012_full_eval.sh  run_stage2_eval.sh  run_stage3_eval.sh  run_stage4_pipeline.sh  run_stage5_eval.sh  run_stage5_pipeline.sh  run_top_tier_eval.sh
tests/: test_countsketch2d.cpp  test_exposure_cert.cpp  test_mpi_intercept_compression_mode.cpp  test_mpi_intercept_exact_passthrough.cpp  test_mpi_intercept_fallback.cpp  test_rand_range_finder.cpp  test_risk_xva_lipschitz.cpp  test_safety_gate.cpp  test_small_svd.cpp
